# research-rag

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  langsmith_schema.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
evaluation/: evalset.json  test_evalset.json
evaluation/results/: v1-baseline.json
evaluation/results/v1-baseline/: v1-baseline-analysis.md
evaluation/results/v2-hybrid-rerank/: V2-HYBRID-RERANK-ANALYSIS.md  v2-hybrid-rerank.json
evaluation/results/v2-hybrid-rerank-v2/: V2-HYBRID-RERANK-ANALYSIS-v2.md  v2-hybrid-rerank-full-run.jsonl  v2-hybrid-rerank-v2|promptv2-full-run.jsonl  v2-hybrid-rerank-v2|promptv2.json  v2-hybrid-rerank.json
evaluation/results/v3-query-decomp-expand/: V3-QUERY-DECOMP-EXPAND-ANALYSIS.md  v3-query-decomp-expand.json
evaluation/results/v3.1-prefetch-scale/: v3.1-prefetch-scale-20.json
evaluation/results/v3.1.1-prefetch-scale-30/: V3-PREFETCH-SCALED-ANALYSIS.md  v3.1.1-prefetch-scale-30.json
scripts/: analyze_chunks.py  test_arxiv.py  test_chunking.py  test_pipeline.py  test_ragas.py  test_retriever.py  verify_connections.py
src/api/: main.py
src/config/: config.py  logging_config.py
src/evaluation/: compare_runs.py  dataset_upload.py  ragas_runner.py
src/generation/: chain.py
src/ingestion/: arxiv_client.py  chunker.py  pipeline.py  vector_store.py
src/retrieval/: retriever.py
tests/: __init__.py  conftest.py  test_placeholder.py
tests/integration/: test_api.py
tests/unit/: test_arxiv_client.py  test_chain.py  test_chunker.py  test_evaluation.py  test_pipeline.py  test_retriever.py  test_vector_store.py
(+2 files in other folders)
