[project]
name = "research-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit=4.5.1",
    "pytest>=9.0.2",
    "ruff=0.15.5",
]

[tool.ruff]
# Set the maximum line length (88 is Black's default)
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# E: pycodestyle (base errors)
# F: Pyflakes (logical errors like unused imports)
# I: isort (import sorting)
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
