[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "research-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.4.1",
    "google-genai>=1.66.0",
    "langchain-text-splitters>=1.1.1",
    "langsmith>=0.7.14",
    "pydantic-settings>=2.13.1",
    "qdrant-client>=1.17.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pre-commit==4.5.1",
    "pytest>=9.0.2",
    "ruff==0.15.5",
]

[tool.ruff]
# Set the maximum line length (88 is Black's default)
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# E: pycodestyle (base errors)
# F: Pyflakes (logical errors like unused imports)
# I: isort (import sorting)
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
